--- a/bundle/package.json
+++ b/bundle/package.json
@@ -17,6 +17,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "enjoy-bundle": "^0.1.37",
+    "enjoy-source-map": "^1.2.17",
     "files-to-es5": "^0.1.5",
     "node-pearls": "^0.1.18",
     "rimraf": "^2.6.1"
