--- a/bundle/package.json
+++ b/bundle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chrome-extension-bundle",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,10 @@
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-syntax-class-properties": "^6.13.0",
+    "babel-plugin-syntax-decorators": "^6.13.0",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
@@ -19,6 +23,7 @@
     "enjoy-bundle": "^0.1.37",
     "enjoy-source-map": "^1.2.17",
     "files-to-es5": "^0.1.5",
+    "glob": "^7.1.2",
     "node-pearls": "^0.1.18",
     "rimraf": "^2.6.1"
   }
