--- a/bundle/package.json
+++ b/bundle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chrome-extension-bundle",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "files-to-es5": "^0.1.5",
     "glob": "^7.1.2",
     "node-pearls": "^0.1.18",
+    "parse5": "^3.0.2",
     "rimraf": "^2.6.1"
   }
 }
