--- a/demo/package.json
+++ b/demo/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "test-extension",
+  "name": "extension-demo",
   "version": "0.0.1",
   "description": "",
-  "dependencies": {},
   "devDependencies": {
+    "chrome-extension-kraken": "^0.1.0",
     "chrome-extension-bundle": "^0.1.0",
     "chrome-extension-inject": "^0.1.0"
   }
